--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,9 @@ description = "WIP opus decoder"
 version = "0.1.0"
 authors = ["est31 <MTest31@outlook.com>", "Paul Davey <plmdvy@gmail.com>"]
 
+[features]
+default = ["ogg"]
+
 [dependencies]
 byteorder = "0.5"
 ogg = { version = "~0.3.3", optional = true }
