--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ license = "BSD-3-Clause"
 keywords = ["ogg", "opus"]
 
 [dependencies]
+libc = "0.2.26"
 
 [build-dependencies]
 gcc = "0.3"
+bindgen = "0.26"
