--- a/werk/Cargo.toml
+++ b/werk/Cargo.toml
@@ -8,8 +8,4 @@ repository = "https://github.com/est31/werk"
 keywords = ["ogg", "opus"]
 
 [dependencies]
-libc = "0.2.26"
-
-[build-dependencies]
-gcc = "0.3"
-bindgen = "0.26"
+werk-sys = { path = "../werk-sys" }
