--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ cache: cargo
 
 install: |
   if [[ "$TRAVIS_RUST_VERSION" == nightly ]]; then
-    cargo tarpaulin --version || cargo install cargo-tarpaulin
+    cargo tarpaulin --version || RUSTFLAGS="--cfg procmacro2_semver_exempt" cargo install cargo-tarpaulin
   fi
 
 # before_script:
